Fix spacing after slide buttons

--- a/html/custom.scss
+++ b/html/custom.scss
@@ -190,6 +190,10 @@ p a.btn, .buttons span.btn {
   font-size: 1.2rem;
 }
 
+.buttons .btn {
+  margin-bottom: 1rem;
+}
+
 main {
   // No space after lists-within-lists
   ol ol,
